# IndieStudio

./: .gitignore  CMakeLists.txt  car_example.txt
Assets/BigCity/: CityEngineMaterial.mtl  CityEngineMaterial_1.mtl  CityEngineMaterial_10.mtl  CityEngineMaterial_100.mtl  CityEngineMaterial_101.mtl  CityEngineMaterial_102.mtl  CityEngineMaterial_103.mtl  CityEngineMaterial_104.mtl  CityEngineMaterial_105.mtl  CityEngineMaterial_106.mtl  CityEngineMaterial_107.mtl  CityEngineMaterial_108.mtl  CityEngineMaterial_109.mtl  CityEngineMaterial_11.mtl  CityEngineMaterial_110.mtl  CityEngineMaterial_111.mtl  CityEngineMaterial_112.mtl  CityEngineMaterial_113.mtl  CityEngineMaterial_114.mtl  CityEngineMaterial_115.mtl  CityEngineMaterial_116.mtl  CityEngineMaterial_117.mtl  CityEngineMaterial_118.mtl  CityEngineMaterial_119.mtl  CityEngineMaterial_12.mtl  CityEngineMaterial_120.mtl  CityEngineMaterial_121.mtl  CityEngineMaterial_122.mtl  CityEngineMaterial_123.mtl  CityEngineMaterial_124.mtl  CityEngineMaterial_125.mtl  CityEngineMaterial_126.mtl  CityEngineMaterial_127.mtl  CityEngineMaterial_128.mtl  CityEngineMaterial_129.mtl  CityEngineMaterial_13.mtl  CityEngineMaterial_130.mtl  CityEngineMaterial_131.mtl  CityEngineMaterial_132.mtl  CityEngineMaterial_133.mtl  (+819 more)
Assets/Lambo/: MURCIELAGO640.mtl
Assets/Paris/: Asphalt.mtl  BlindFacadeGF.mtl  BlindFacadeTextured_1.mtl  BlindFacadeTextured_2.mtl  BlindFacadeTextured_3.mtl  ChimneyBase.mtl  ChimneyBase_1.mtl  ChimneyBase_10.mtl  ChimneyBase_11.mtl  ChimneyBase_12.mtl  ChimneyBase_13.mtl  ChimneyBase_14.mtl  ChimneyBase_15.mtl  ChimneyBase_16.mtl  ChimneyBase_17.mtl  ChimneyBase_18.mtl  ChimneyBase_19.mtl  ChimneyBase_2.mtl  ChimneyBase_20.mtl  ChimneyBase_3.mtl  ChimneyBase_4.mtl  ChimneyBase_5.mtl  ChimneyBase_6.mtl  ChimneyBase_7.mtl  ChimneyBase_8.mtl  ChimneyBase_9.mtl  Concrete.mtl  Curbs.mtl  FacadeSets.mtl  FacadeSets_1.mtl  FacadeSets_10.mtl  FacadeSets_11.mtl  FacadeSets_12.mtl  FacadeSets_13.mtl  FacadeSets_14.mtl  FacadeSets_15.mtl  FacadeSets_16.mtl  FacadeSets_17.mtl  FacadeSets_18.mtl  FacadeSets_19.mtl  (+118 more)
Assets/car/: steeringwheel.mtl
NetworkData/samples_input/: car.txt  cat.txt
ServerJS/: index.js
ServerJS/Event/: forward.js  join_room.js  login.js  race.js
ServerJS/schema/: Clients.js  Rooms.js
includes/: AGame.hpp  AGameCamera.hpp  AGameObject.hpp  AModelObject.hpp  APhysicObject.hpp  BasicCamera.hpp  Car.hpp  CarModel.hpp  CarMotor.hpp  CarWheel.hpp  Circuit.hpp  EventReceiver.hpp  FolderLoader.hpp  GameCameraFPS.hpp  GameCheckpoint.hpp  GameCube.hpp  IGame.hpp  IGameObject.hpp  IndieGame.hpp  KeyboardManager.hpp  Minimap.hpp  NetworkEventBridge.hpp  Race.hpp  RandomEvent.hpp  SteeringWheel.hpp  Vector2.hpp  Vector3.hpp
includes/BulletAnimator/: CBulletPhysics.h  PhysicsCar.h
includes/CarSystem/: AICar.hpp  Car.hpp  CarModel.hpp  CarMotor.hpp  CarWheel.hpp  LearningCar.hpp  NetworkCar.hpp  Wheel.hpp  WheelData.hpp  WheelHit.hpp  carWatcher.hpp  loadCar.h
includes/Client/: Client.hpp  ClientSocket.hpp  Message.hpp  Socket.hpp
includes/GUI/: Audio.hpp  Concessionnaire.hpp  Course.hpp  Garage.hpp  Graphic.hpp  IGUI.hpp  JoinServer.hpp  Keyboard.hpp  MainMenu.hpp  Menu.hpp  Settings.hpp
includes/NeuralNetwork/: GeneticPool.hpp  GeneticTrainer.hpp  Genome.hpp
includes/Watcher/: carWatcher.hpp
lib/: untitled.xml
lib/SDL2-2.0.5/: Makefile  Makefile.rules  config.status  libtool
lib/boost_1_64_0/: bjam  project-config.jam
lib/bullet3-2.83.7/: 0_Bullet3Demo.txt  CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  install_manifest.txt
lib/cegui-0.8.7/: CMakeLists.txt
lib/irrBullet/: Makefile  a.out
sources/: AGame.cpp  AGameCamera.cpp  AGameObject.cpp  AModelObject.cpp  APhysicObject.cpp  BasicCamera.cpp  Car.cpp  CarModel.cpp  CarMotor.cpp  Circuit.cpp  EventReceiver.cpp  FolderLoader.cpp  GameCameraFPS.cpp  GameCheckpoint.cpp  GameCube.cpp  IndieGame.cpp  KeyboardManager.cpp  Minimap.cpp  NetworkEventBridge.cpp  Race.cpp  RandomEvent.cpp  SoundManager.cpp  SteeringWheel.cpp  Vector2.cpp  Vector3.cpp  main.cpp
(+408 files in other folders)
